adjusted color spectrum especially dark to emphasize tabs button

--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -5,4 +5,10 @@ chat-page{
 			background: $light;
 		}
 	}
+	.chat-me{
+		background: $secondary;
+	}
+	.chat-other{
+		background: $secondary-light;
+	}
 }
