--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,13 +23,14 @@ $font-path: "../assets/fonts";
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
-$primary: #424242;
-$primary-light: #BDBDBD;
+$primary: #212121;
+$primary-light: #616161;
 $secondary: #E0E0E0;
 $secondary-light: #FAFAFA;
+$accent-dark: #FFAB00;
 $accent: #FFC400;
 $accent-light: #FFE57F;
-$dark: #212121;
+$dark: #000000;
 $light: #FFFFFF;
 $danger: #F44336;
 
@@ -38,6 +39,7 @@ $colors: (
   primary-light: $primary-light,
   secondary:  $secondary,
   secondary-light: $secondary-light,
+  accent-dark: $accent-dark,
   accent: $accent,
   accent-light: $accent-light,
   danger:     $danger,
@@ -49,6 +51,7 @@ $colors: (
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
+//TABS
 $tabs-ios-tab-icon-color: $accent-light;
 $tabs-ios-tab-icon-color-active : $accent;
 $tabs-ios-tab-text-color-active: $accent;
@@ -59,6 +62,7 @@ $tabs-ios-tab-text-color: $accent-light;
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
+//TABS
 $tabs-md-tab-icon-color-active: $accent;
 $tabs-md-tab-icon-color: $accent-light;
 $tabs-md-tab-text-color-active: $accent;
