--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -10,6 +10,8 @@ registration-page{
 		    padding: 10px 10px 10px 50px;
 		    border-top: $light solid 10px;
 		    border-bottom: $light solid 10px;
+		    width: 1vw;
+		    display: inline-flex;
 		    &:first-child{
 		    	padding-left: 10px;
 		    }
@@ -28,23 +30,17 @@ registration-page{
 	    	}
 	    	&.active{
 	    		background-color: $accent;
+	    		width: 100vw;
 	    		.registration-arrow{
 	    			background-color:$accent;
 	    		}
 	    	}
-	    }
-		// ion-col{
-		// 	background-color: $secondary;
-		// 	.registration-arrow{
-		// 		background-color: blue;
-		// 		height: 20px;
-		// 		width: 20px;
-		// 		transform: rotate(45deg);
-		// 	}
-		// 	&[active]{
-		// 		background-color: $accent;
-		// 	}
-		// }
 
+	    	ion-label{
+	    		z-index: 999;
+	    		margin: 0px;
+	    	}
+	    }
+		
 	}
 }
