--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,5 +15,38 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-ion-app{
+@media all and (min-device-width: 768px){
+	ion-col[width-md-0]{
+		display: none;		
+	}
+	ion-col[width-md-10]{
+		flex: 10% !important;
+	}
+	ion-col[width-md-20]{
+		flex: 20% !important;
+	}
+	ion-col[width-md-25]{
+		flex: 25% !important;
+	}
+	ion-col[width-md-33]{
+		flex: 33% !important;
+	}
+	ion-col[width-md-50]{
+		flex: 50% !important;
+	}
+	ion-col[width-md-67]{
+		flex: 67% !important;
+	}
+	ion-col[width-md-75]{
+		flex: 75% !important;
+	}
+	ion-col[width-md-80]{
+		flex: 80% !important;
+	}
+	ion-col[width-md-90]{
+		flex: 90% !important;
+	}
+	ion-col[width-md-100]{
+		flex: 100% !important;
+	}
 }
