--- a/src/components/profile-form/profile-form.scss
+++ b/src/components/profile-form/profile-form.scss
@@ -1,4 +1,4 @@
-change-password-form{
+profile-form{
 
 	.form-group{
 		margin: 2%;
@@ -7,4 +7,5 @@ change-password-form{
 	form{
 		text-align: center;
 	}
+		
 }
