--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -1,26 +1,28 @@
-<form [formGroup]="changePasswordForm" (ngSubmit)="submitForm()">
-    <ion-list>
-        <div class="row form-group">
-            <ion-item field>
-                <ion-label in-line>Password</ion-label>
-                <ion-input type="password" formControlName="password"></ion-input>
-            </ion-item>
+<ion-content>
+    <form [formGroup]="changePasswordForm" (ngSubmit)="submitForm()">
+        <ion-list>
+            <div class="row form-group">
+                <ion-item field>
+                    <ion-label in-line>Password</ion-label>
+                    <ion-input type="password" formControlName="password"></ion-input>
+                </ion-item>
+            </div>
+            <div class="error-message" *ngIf="changePasswordForm.get('password').invalid">
+                {{ errors.password }}
+            </div>
+            <div class="row form-group">
+                <ion-item field>
+                    <ion-label in-line>Re-Type Password</ion-label>
+                    <ion-input type="password" formControlName="confirm"></ion-input>
+                </ion-item>
+            </div>
+            <div class="error-message" *ngIf="changePasswordForm.get('confirm').invalid">
+                {{ errors.confirm }}
+            </div>
+        </ion-list>
+        <div class="error-message" *ngIf="changePasswordForm.hasError('passwordsDoNotMatch')">
+            Passwords do not match
         </div>
-        <div class="error-message" *ngIf="changePasswordForm.get('password').invalid">
-            {{ errors.password }}
-        </div>
-        <div class="row form-group">
-            <ion-item field>
-                <ion-label in-line>Re-Type Password</ion-label>
-                <ion-input type="password" formControlName="confirm"></ion-input>
-            </ion-item>
-        </div>
-        <div class="error-message" *ngIf="changePasswordForm.get('confirm').invalid">
-            {{ errors.password }}
-        </div>
-    </ion-list>
-    <div class="error-message" *ngIf="changePasswordForm.hasError('passwordsDoNotMatch')">
-        Passwords do not match
-    </div>
-    <button type="submit" ion-button round large color="accent" [disabled]="changePasswordForm.invalid"> Change Password </button>
-</form>
+        <button type="submit" ion-button round large color="accent" [disabled]="changePasswordForm.invalid"> Change Password </button>
+    </form>
+</ion-content>
