--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <form [formGroup]="changePasswordForm" (ngSubmit)="submitForm()">
+    <form [formGroup]="changePasswordForm" (ngSubmit)="submitForm()" noValidate>
         <ion-list>
             <div class="row form-group">
                 <ion-item field>
