--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -2,8 +2,8 @@
     <form [formGroup]="changePasswordForm" (ngSubmit)="submitForm()" noValidate>
         <ion-list>
             <div class="row form-group">
-                <ion-item field>
-                    <ion-label in-line>Password</ion-label>
+                <ion-label class="form-label h1">Password</ion-label>
+                <ion-item round>
                     <ion-input type="password" formControlName="password"></ion-input>
                 </ion-item>
             </div>
@@ -11,8 +11,8 @@
                 {{ errors.password }}
             </div>
             <div class="row form-group">
-                <ion-item field>
-                    <ion-label in-line>Re-Type Password</ion-label>
+                <ion-label class="form-label h1">Re-Type Password</ion-label>
+                <ion-item round>
                     <ion-input type="password" formControlName="confirm"></ion-input>
                 </ion-item>
             </div>
@@ -20,9 +20,8 @@
                 {{ errors.confirm }}
             </div>
         </ion-list>
-        <div class="error-message" *ngIf="changePasswordForm.hasError('passwordsDoNotMatch')">
-            Passwords do not match
+        <div class="form-buttons">
+            <button ion-button round large color="accent" [disabled]="changePasswordForm.invalid"> Change Password </button>
         </div>
-        <button type="submit" ion-button round large color="accent" [disabled]="changePasswordForm.invalid"> Change Password </button>
     </form>
 </ion-content>
