--- a/src/components/change-password-form/change-password-form.scss
+++ b/src/components/change-password-form/change-password-form.scss
@@ -1,10 +1,16 @@
 change-password-form{
 
-	.form-group{
-		margin: 2%;
-	}
+	form {
 
-	form{
-		text-align: center;
-	}
+		.form-group{
+			margin: 5% 2% 0 2%;
+		}
+
+		.form-label{
+			margin: 2% 0 2% 0;
+		}
+		.form-buttons{
+			text-align: center;
+		}
+	}	
 }
