--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -99,3 +99,9 @@ $tabs-md-tab-text-color: $accent-light;
 
 @import "roboto";
 @import "noto-sans";
+
+// SIZE
+// --------------------------------------------------
+$h1: 14pt;
+$h2: 13pt;
+$h3: 12pt;
