--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <form [formGroup]="profileForm" (ngSubmit)="submitForm()">
+    <form [formGroup]="profileForm" (ngSubmit)="submitForm()" novalidate>
         <ion-list>
             <div class="row form-group">
                 <ion-item field>
