consultation form with add attachment, diagram image not working yet

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -85,6 +85,8 @@ $tabs-md-tab-text-color: $accent-light;
 // default are overridden.
 
 @import "ionic.theme.default";
+$modal-inset-width : 100%;
+$modal-inset-height-large : 100%;
 
 // Ionicons
 // --------------------------------------------------
