--- a/src/pages/consultation-form/consultation-form.scss
+++ b/src/pages/consultation-form/consultation-form.scss
@@ -1,3 +1,10 @@
 page-consultation-form {
 
 }
+
+add-attachment-modal{
+	height: auto !important;
+	width: 400px !important;
+	position: static !important;
+	left: calc(100vh - 200px) !important;
+}
