--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content #Content padding>
     <form [formGroup]="changePasswordForm" (ngSubmit)="submitForm()" noValidate>
         <ion-list>
             <div class="row form-group">
