--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </ion-list>
-        <div class="form-buttons">
+        <div center>
             <button ion-button round large color="accent" [disabled]="changePasswordForm.invalid"> Change Password </button>
         </div>
     </form>
