--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -65,6 +65,8 @@
                 </ion-item>
             </div>
         </ion-list>
-        <button type="submit" ion-button round large color="accent" [disabled]="profileForm.invalid"> Submit </button>
+        <div center>
+            <button type="submit" ion-button round large color="accent" [disabled]="profileForm.invalid"> Submit </button>
+        </div>
     </form>
 </ion-content>
