--- a/src/components/upload-photo/upload-photo.html
+++ b/src/components/upload-photo/upload-photo.html
@@ -1,23 +1,25 @@
 <ion-content>
-	<div class="frame">
-		<ion-row *ngIf="!image">
-			<ion-col width-50>
-				<button ion-button clear (click)="openCamera()">
-					<ion-icon name="camera"></ion-icon>
-					From Camera
-				</button>
-			</ion-col>
-			<ion-col width-50>
-				<button ion-button clear (click)="openAlbum()">
-					<ion-icon name="images"></ion-icon>
-					From Album
-				</button>
+	<div center>
+		<div class="frame">
+			<ion-row *ngIf="!image">
+				<ion-col width-50>
+					<button ion-button clear (click)="openCamera()">
+						<ion-icon name="camera"></ion-icon>
+						From Camera
+					</button>
+				</ion-col>
+				<ion-col width-50>
+					<button ion-button clear (click)="openAlbum()">
+						<ion-icon name="images"></ion-icon>
+						From Album
+					</button>
 
-			</ion-col>
-		</ion-row>
-		<img [src]="image" *ngIf="image">
+				</ion-col>
+			</ion-row>
+			<img [src]="image" *ngIf="image">
+		</div>
+		<button ion-button round large color="accent"
+		(click)="submit()">Submit</button>
+		<button ion-button round large outline color="accent" (click)="clear()">Clear</button>
 	</div>
-	<button ion-button round large color="accent"
-	(click)="submit()">Submit</button>
-	<button ion-button round large outline color="accent" (click)="clear()">Clear</button>
 </ion-content>
