--- a/src/components/change-password-form/change-password-form.html
+++ b/src/components/change-password-form/change-password-form.html
@@ -6,14 +6,14 @@
                 <ion-item round>
                     <ion-input type="password" formControlName="password"></ion-input>
                 </ion-item>
-                <div class="error-message" *ngIf="changePasswordForm.get('password').invalid">
+                <div class="error-message" *ngIf="changePasswordForm.get('password').dirty && changePasswordForm.get('password').invalid">
                     {{ errors.password }}
                 </div>
                 <ion-label class="form-label h1">Re-Type Password</ion-label>
                 <ion-item round>
                     <ion-input type="password" formControlName="confirm"></ion-input>
                 </ion-item>
-                <div class="error-message" *ngIf="changePasswordForm.get('confirm').invalid">
+                <div class="error-message" *ngIf="changePasswordForm.get('confirm').dirty && changePasswordForm.get('confirm').invalid">
                     {{ errors.confirm }}
                 </div>
             </div>
