--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -3,19 +3,37 @@
     <form [formGroup]="profileForm" (ngSubmit)="submitForm()" novalidate>
         <ion-list>
             <div class="row form-group">
-                <ion-label class="form-label h1">PRC License *</ion-label>
-                <ion-item round>
-                    <ion-input type="number" formControlName="prc"></ion-input>
-                </ion-item>
-                <div class="error-message" *ngIf="profileForm.get('prc').dirty && profileForm.get('prc').invalid">
-                    {{ errors.prc }}
-                </div>
-                <ion-label class="form-label h1">PTR *</ion-label>
-                <ion-item round>
-                    <ion-input type="number" formControlName="ptr"></ion-input>
-                </ion-item>
-                <div class="error-message" *ngIf="profileForm.get('ptr').dirty &&  profileForm.get('ptr').invalid">
-                    {{ errors.ptr }}
+                <div *ngIf="formType === 'doctor'">
+                    <ion-label class="form-label h1">PRC License *</ion-label>
+                    <ion-item round>
+                        <ion-input type="number" formControlName="prc"></ion-input>
+                    </ion-item>
+                    <div class="error-message" *ngIf="profileForm.get('prc').dirty && profileForm.get('prc').invalid">
+                        {{ errors.prc }}
+                    </div>
+                    <ion-label class="form-label h1">PTR *</ion-label>
+                    <ion-item round>
+                        <ion-input type="number" formControlName="ptr"></ion-input>
+                    </ion-item>
+                    <div class="error-message" *ngIf="profileForm.get('ptr').dirty &&  profileForm.get('ptr').invalid">
+                        {{ errors.ptr }}
+                    </div>
+                    <ion-label class="form-label h1">Doctor Type *</ion-label>
+                    <ion-item round>
+                        <ion-select class="options" formControlName="doctorType">
+                            <ion-option *ngFor="let type of doctorTypes" value="{{ type.code }}">{{ type.description }}</ion-option>
+                        </ion-select>
+                    </ion-item>
+                    <div class="error-message" *ngIf="profileForm.get('doctorType').dirty &&  profileForm.get('doctorType').invalid">
+                        {{ errors.doctorType }}
+                    </div>
+                    <ion-label class="form-label h1">Specialization *</ion-label>
+                    <ion-item round>
+                        <ion-input formControlName="specialization"></ion-input>
+                    </ion-item>
+                    <div class="error-message" *ngIf="profileForm.get('specialization').dirty &&  profileForm.get('specialization').invalid">
+                        {{ errors.specialization }}
+                    </div>
                 </div>
                 <ion-label class="form-label h1">Email *</ion-label>
                 <ion-item round>
@@ -49,13 +67,16 @@
                 <div class="error-message" *ngIf="profileForm.get('birthDate').dirty &&  profileForm.get('birthDate').invalid">
                     {{ errors.birthDate }}
                 </div>
-                <ion-label class="form-label h1">Gender</ion-label>
+                <ion-label class="form-label h1">Gender *</ion-label>
                 <ion-list radio-group name="gender" formControlName="gender">
                     <ion-item *ngFor="let gender of genderList">
                         <ion-radio color="primary" value="{{ gender.id }}"></ion-radio>
                         <ion-label>{{ gender.description }}</ion-label>
                     </ion-item>
                 </ion-list>
+                <div class="error-message" *ngIf="profileForm.get('gender').dirty &&  profileForm.get('gender').invalid">
+                    {{ errors.gender }}
+                </div>
                 <ion-label class="form-label h1">Address</ion-label>
                 <ion-item round>
                     <ion-input formControlName="address"></ion-input>
